--- a/less/contact.less
+++ b/less/contact.less
@@ -147,4 +147,18 @@
       }
     }
   }
+  @media(max-width: 600px){
+    &-item{
+      .contact-text{
+        padding-right: 0;
+      }
+    }
+    &-form{
+      padding: 25px 25px 25px 25px;
+      margin-top: 60px;
+      .contact-sex{
+        display: none;
+      }
+    }
+  }
 }
