--- a/less/price.less
+++ b/less/price.less
@@ -67,4 +67,18 @@
       color: #292A2A;
     }
   }
+  @media(max-width: 600px){
+    &-card{
+      &__item{
+        .item-price{
+          padding-bottom: 5px;
+        }
+      }
+      &__sex{
+        transform: rotateZ(-0deg) translateX(-0px);
+        top: 60px;
+        right: 15px;
+      }
+    }
+  }
 }
