--- a/less/apart.less
+++ b/less/apart.less
@@ -1,5 +1,13 @@
 .apart{
   margin: 100px 0;
+  position: relative;
+  &:before{
+    content: url(/img/team-mask.png);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+  }
   &-title{
     h1{
       font-weight: bold;
